--- a/idc-servicio-responsables-k8s-dev.properties
+++ b/idc-servicio-responsables-k8s-dev.properties
@@ -3,14 +3,15 @@ eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 eureka.instance.preferIpAddress = true
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
-# conexion Postgres
-#spring.datasource.url=jdbc:postgresql://pgsql12-idc-responsables:5432/db_idc_responsables
-spring.datasource.url=jdbc:postgresql://idc-mysql-postgres.eastus2.cloudapp.azure.com:5432/db_idc_responsables
-spring.datasource.username=postgres
-spring.datasource.password=Carvajal2019*
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
+
+
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_responsables
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
