--- a/idc-servicio-rango-k8s-dev.properties
+++ b/idc-servicio-rango-k8s-dev.properties
@@ -5,11 +5,10 @@ eureka.instance.preferIpAddress = true
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
-# conexion MySQL
-#spring.datasource.url=jdbc:mysql://mysql8-idc-rango:3306/db_idc_rango?user=root&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.url=jdbc:mysql://idc-mysql-postgres.eastus2.cloudapp.azure.com:3306/db_idc_rango?user=idc-rango-admin&password=Carvajal2019*&serverTimezone=America/Bogota&allowPublicKeyRetrieval=true&useSSL=false
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# conexion SQL Server
+spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_rango
+spring.datasource.username=Administrador
+spring.datasource.password=Carvajal2020*
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=debug
