--- a/idc-servicio-auditoria-k8s-dev.properties
+++ b/idc-servicio-auditoria-k8s-dev.properties
@@ -18,8 +18,8 @@ hibernate.hbm2ddl.auto=update
 
 logging.level.org.hibernate.SQL=debug
 
-#feign.url=http://idc-servicio-zuul-server:8090/api
-feign.url=http://idck8master.eastus.cloudapp.azure.com:30006/api
+feign.url=http://idc-servicio-zuul-server:8090/api
+#feign.url=http://idck8sdev-master.eastus2.cloudapp.azure.com:30006/api
 
 #Broker mensajeria
 idc.broker=rabbitmq
