--- a/idc-servicio-log-k8s-dev.properties
+++ b/idc-servicio-log-k8s-dev.properties
@@ -2,6 +2,7 @@
 # url base del micro-servicio de eureka
 eureka.client.service-url.defaultZone=http://idc-eureka-server:8761/eureka/
 eureka.instance.preferIpAddress = true
+spring.main.allow-bean-definition-overriding=true
 
 # url base del servidor zipkin para registro de trazas
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
