--- a/idc-servicio-parametros-qa.properties
+++ b/idc-servicio-parametros-qa.properties
@@ -15,4 +15,6 @@ spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+feign.url=http://idc-servicio-zuul-server:8090/api
+
 
