--- a/idc-servicio-cierre-qa.properties
+++ b/idc-servicio-cierre-qa.properties
@@ -8,8 +8,8 @@ spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_estaciones_qa
-spring.datasource.username=sa
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_estaciones_qa
+spring.datasource.username=administrador
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
@@ -20,8 +20,8 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 
-spring.second-datasource.url = jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_configcierres_qa
-spring.second-datasource.username = sa
+spring.second-datasource.url = jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_configcierres_qa
+spring.second-datasource.username = administrador
 spring.second-datasource.password = Carvajal2020*
 spring.second-datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
