--- a/idc-servicio-diagnostico-qa.properties
+++ b/idc-servicio-diagnostico-qa.properties
@@ -8,7 +8,7 @@ spring.zipkin.base-url=http://zipkin-server-memory:9411/
 
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_diagnostico_qa
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_diagnostico_qa
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
