--- a/idc-servicio-indata-qa.properties
+++ b/idc-servicio-indata-qa.properties
@@ -37,7 +37,7 @@ idc.rabbitmq.eliminardetalleremisionqueue=idc.eliminardetalleremision_queue
 idc.rabbitmq.aprobacionimagenesqueue=idc.aprobacionimagenes_queue
 
 #Conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=IDC-Central-QA
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
