--- a/idc-servicio-parametros-qa.properties
+++ b/idc-servicio-parametros-qa.properties
@@ -8,8 +8,8 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://zipkin-server-memory:9411/
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_parametros_qa
-spring.datasource.username=sa
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_parametros_qa
+spring.datasource.username=administrador
 spring.datasource.password=Carvajal2020*
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.database-platform=org.hibernate.dialect.SQLServer2012Dialect
