--- a/idc-servicio-rango-qa.properties
+++ b/idc-servicio-rango-qa.properties
@@ -6,7 +6,7 @@ eureka.instance.preferIpAddress = true
 spring.zipkin.base-url=http://idc-zipkin-server-memory:9411/
 
 # conexion SQL Server
-spring.datasource.url=jdbc:sqlserver://central-idc-20.eastus.cloudapp.azure.com:1433;databaseName=db_idc_rango_qa
+spring.datasource.url=jdbc:sqlserver://central-idc-dqs.eastus.cloudapp.azure.com:1433;databaseName=db_idc_rango_qa
 spring.datasource.username=Administrador
 spring.datasource.password=Carvajal2020*
 spring.jpa.hibernate.ddl-auto=update
